# homelab

./: .gitignore  LICENSE  README.md  doppler.yaml
app/nettle/nettle/: settings.py  urls.py
coreos/: coreos.bu
k8s/: nfs.sh
nettle/: db.sqlite3  manage.py
nettle/nettle/: asgi.py  settings.py  urls.py  wsgi.py
nettle/scraper/: views.py
oh-my-secrets/: admins.dbm  app.py  pyproject.toml  requirements.txt  tokens.dbm
prefect/: example.py  install.sh  prefect.config  requirements.freeze  requirements.txt
pulsar/: install.sh  pulsar.service
rust/: maturin.sh
rust/nettle/: Cargo.toml
rust/nettle/src/: log4rs.yaml  main.rs
rust/nettle_py/: Cargo.toml  pyproject.toml
rust/nettle_py/src/: lib.rs
secrets/: app.py  pyproject.toml
services/: tidb.service
sql/: postgres.home.session.sql  tidb.home.session.sql
