[tool.poetry]
name = "oh-my-secrets"
version = "0.1.0"
description = "Secrets management without the pain."
authors = ["Divye Kapoor <divyekapoor@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "oh_my_secrets"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
loguru = "^0.6.0"
apscheduler = "^3.9.1.post1"
ipy = "^1.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
