[package]
name = "nettle_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nettle_py"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
