[package]
name = "nettle_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nettle_py"
crate-type = ["cdylib"]

[dependencies]
color-eyre = "0.6.2"
eyre = { version = "0.6.8", features = ["pyo3"] }
log = "0.4.17"
log4rs = "1.1.1"
pyo3 = { version = "0.16.5", features = ["extension-module", "eyre"] }
serde_yaml = "0.9.11"
